Fix text alignment

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -144,6 +144,7 @@ footer {
     }
     .container {
       margin-left: 20px !important;
+      padding-right: 15px;
     }
     .footer {
       text-align: left;
